cabal-version:  2.0
name:           ldap-bot
version:        0.5.0.0
author:         Alexander Shestakov
maintainer:     a.shestakov@itransition.com
copyright:      2020 Itransition
build-type:     Simple

library
  exposed-modules:
      API
      App
      Client.API
      Client.Facebook
      Client.Model
      Env
      Server.API
      Server.Command
      Server.Hook
      Server.LDAP
      Server.Model
      Server.Registry
      Server.Verify
  hs-source-dirs:
      src
  default-extensions: DataKinds DeriveAnyClass DeriveGeneric DuplicateRecordFields FlexibleContexts FlexibleInstances GADTs LambdaCase MonoLocalBinds NamedFieldPuns OverloadedStrings PolyKinds QuasiQuotes RankNTypes ScopedTypeVariables TemplateHaskell TypeApplications TypeFamilies TypeOperators
  ghc-options: -Wall -fplugin=Polysemy.Plugin
  build-depends:
      aeson
    , aeson-qq
    , base >=4.7 && <5
    , bytestring
    , containers
    , data-default
    , http-client
    , http-client-tls
    , ldap-client
    , lens
    , neat-interpolation
    , polysemy >=1.3
    , polysemy-plugin
    , servant-client
    , servant-server
    , text
    , wai-extra
    , warp
    , with-utf8
  default-language: Haskell2010

executable ldap-bot-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  default-extensions: DataKinds DeriveAnyClass DeriveGeneric DuplicateRecordFields FlexibleContexts FlexibleInstances GADTs LambdaCase MonoLocalBinds NamedFieldPuns OverloadedStrings PolyKinds QuasiQuotes RankNTypes ScopedTypeVariables TemplateHaskell TypeApplications TypeFamilies TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , aeson-qq
    , base >=4.7 && <5
    , bytestring
    , containers
    , data-default
    , http-client
    , http-client-tls
    , ldap-bot
    , ldap-client
    , lens
    , neat-interpolation
    , polysemy >=1.3
    , polysemy-plugin
    , servant-client
    , servant-server
    , text
    , wai-extra
    , warp
    , with-utf8
  default-language: Haskell2010

test-suite ldap-bot-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Client.FacebookSpec
      Client.ModelSpec
      EnvSpec
      Server.CommandSpec
      Server.LDAPSpec
      Server.MessagesSpec
      Server.RegistrySpec
      Server.VerifySpec
  hs-source-dirs:
      test
  default-extensions: DataKinds DeriveAnyClass DeriveGeneric DuplicateRecordFields FlexibleContexts FlexibleInstances GADTs LambdaCase MonoLocalBinds NamedFieldPuns OverloadedStrings PolyKinds QuasiQuotes RankNTypes ScopedTypeVariables TemplateHaskell TypeApplications TypeFamilies TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , aeson
    , aeson-qq
    , base >=4.7 && <5
    , bytestring
    , containers
    , data-default
    , generic-arbitrary
    , hspec
    , http-client
    , http-client-tls
    , ldap-bot
    , ldap-client
    , lens
    , neat-interpolation
    , polysemy >=1.3
    , polysemy-plugin
    , quickcheck-instances
    , servant-client
    , servant-server
    , silently
    , text
    , wai-extra
    , warp
    , with-utf8
  default-language: Haskell2010
